manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-microservice
spec: 
  replicas: 4
  selector: 
    matchExpressions: 
    - key: app
      operator: In
      values: 
      - dotnet-microservice
  strategy: 
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template: 
    metadata: 
      labels: 
        app : dotnet-microservice
    spec: 
      containers: 
      - image: "<Image Name>"
        ports: 
        - containerPort: 80
