manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-microservice
spec:
  type: ClusterIP
  selector:
    app : dotnet-microservice
  ports:
  - port: 80
    targetPort: 80
